RESOLVED FIXED164051
AX: WebKit is incorrectly mapping the <meter> element to progressbar
https://bugs.webkit.org/show_bug.cgi?id=164051
Summary AX: WebKit is incorrectly mapping the <meter> element to progressbar
James Craig
Reported 2016-10-27 01:53:30 PDT
According to: https://github.com/w3c/aria/issues/451 AX: WebKit is incorrectly mapping the <meter> element to progressbar. This is probably my fault.
Attachments
patch (11.82 KB, patch)
2019-02-22 17:56 PST, chris fleizach
no flags
James Craig
Comment 1 2016-10-27 01:55:53 PDT
Radar WebKit Bug Importer
Comment 2 2016-11-01 17:04:54 PDT
Joanmarie Diggs
Comment 3 2019-02-05 11:27:44 PST
James: Ping. What's the verdict on the correct mappings? HTML-AAM lists nothing for your platform, and I don't know what to put in the Core-AAM for the new meter role we have in ARIA. Thanks!
chris fleizach
Comment 4 2019-02-22 17:56:58 PST
WebKit Commit Bot
Comment 5 2019-02-23 08:11:47 PST
Comment on attachment 362808 [details] patch Clearing flags on attachment: 362808 Committed r241989: <https://trac.webkit.org/changeset/241989>
WebKit Commit Bot
Comment 6 2019-02-23 08:11:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.